--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "yarn tailwind && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "tailwind": "tailwindcss -o styles/build.css --minify",
@@ -20,12 +20,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swiper": "^8.4.5",
-    "typescript": "4.9.3",
-    "tailwindcss": "^3.2.4"
+    "typescript": "4.9.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19"
-    
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
